--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -16,7 +16,7 @@ srcdir			= @srcdir@
 VPATH			= @srcdir@
 
 # Build-related substitution variables
-objects			= NGame.@OBJEXT@ NEngine.@OBJEXT@ NInput.@OBJEXT@ NCamera.@OBJEXT@ NNode.@OBJEXT@ NScene.@OBJEXT@ NRender.@OBJEXT@ NShader.@OBJEXT@
+objects			= NGame.@OBJEXT@ NColor.@OBJEXT@ NEngine.@OBJEXT@ NInput.@OBJEXT@ NCamera.@OBJEXT@ NNode.@OBJEXT@ NScene.@OBJEXT@ NRender.@OBJEXT@ NShader.@OBJEXT@
 CXX				= @CXX@
 CXXFLAGS		= @CXXFLAGS@
 LIBS			= @LIBS@
@@ -32,7 +32,7 @@ main@EXEEXT@: main.@OBJEXT@ $(objects)
 	$(CXX) $(CXXFLAGS) $(DEFS) main.@OBJEXT@ $(objects) -o main@EXEEXT@ $(LIBS)
 
 clean:
-	rm -f client@EXEEXT@ server@EXEEXT@ mapmaker@EXEEXT@ *.@OBJEXT@
+	rm -f main@EXEEXT@ *.@OBJEXT@
 
 #Autotools mumbo jumbo
 
