--- a/src/Makefile
+++ b/src/Makefile
@@ -16,10 +16,10 @@ srcdir			= .
 
 
 # Build-related substitution variables
-objects			= NGame.o NColor.o NEngine.o NInput.o NCamera.o NNode.o NScene.o NRender.o NShader.o NText.o NTexture.o NLua.o NConfig.o
+objects			= NGame.o NColor.o NEngine.o NInput.o NCamera.o NNode.o NScene.o NRender.o NShader.o NText.o NTexture.o NLua.o NConfig.o NGui.o
 CXX				= g++
 CXXFLAGS		= -g -O2 -I/usr/include/freetype2
-LIBS			= -llua -lfreetype -lglfw -lGLEW -lGL 
+LIBS			= -lSOIL -llua -lfreetype -lglfw -lGLEW -lGL 
 DEFS			= -DHAVE_CONFIG_H
 
 INSTALL			= /usr/bin/install -c
