Added windows support

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -3,6 +3,12 @@
 /* Define to 1 if you have the `floor' function. */
 #undef HAVE_FLOOR
 
+/* Define to 1 if you have the <freetype/freetype.h> header file. */
+#undef HAVE_FREETYPE_FREETYPE_H
+
+/* Define to 1 if you have the <glm/glm.hpp> header file. */
+#undef HAVE_GLM_GLM_HPP
+
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
@@ -35,6 +41,9 @@
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
+
+/* Define to 1 if you have the <utf8.h> header file. */
+#undef HAVE_UTF8_H
 
 /* Define to 1 if the system has the type `_Bool'. */
 #undef HAVE__BOOL
