added buggy space

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,8 @@ set(source
     src/NTextInput.cpp
     src/NTexture.cpp
     src/NUnicode.cpp
-    src/NWindow.cpp)
+    src/NWindow.cpp
+    src/NSpace.cpp)
 
 # GAME
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmakemodules")
